# SDTA

./: .gitignore  CMakeLists.txt
csrc/: AnalyticalSolution.cpp  AnalyticalSolution.h  Architecture.cpp  Architecture.h  CMakeLists.txt  CommandLine.h  Common.cpp  CondensedEquation.cpp  CondensedEquation.h  Constrain.cpp  Constrain.h  Continuation.h  Crossover.h  Crossover.hpp  Digest.h  DynamicPower.cpp  DynamicPower.h  Evaluation.cpp  Evaluation.h  Evolution.cpp  Evolution.h  Evolution.hpp  EvolutionStats.cpp  EvolutionStats.h  EvolutionStats.hpp  EvolutionTuning.cpp  EvolutionTuning.h  GeneticListScheduler.cpp  GeneticListScheduler.h  GeneticListScheduler.hpp  Genetics.h  Genetics.hpp  Genetics.m  Graph.cpp  Graph.h  GraphAnalysis.cpp  GraphAnalysis.h  Helper.h  Hotspot.cpp  Hotspot.h  (+65 more)
doc/: .gitignore  app.bbl  paper.tex  soft.bst
doc/assets/: circuit.ai  leakage.ai  task-graph.ai
doc/include/: abstract.tex  analytical-solution.tex  appendix.tex  bibliography.tex  common.tex  conclusion.tex  condensed-equation.tex  direct-dense-solution.tex  direct-solutions.tex  direct-sparse-solution.tex  experimental-results.tex  fast-fourier-transform.tex  figure-leakage.tex  figure-motivation.tex  figure-performance.tex  figure-state-of-the-art.tex  genetic-algorithm.tex  hotspot-solution.tex  hotspot.tex  introduction.tex  iterative-solutions.tex  leakage.tex  motivation.tex  optimization.tex  preliminaries.tex  problem.tex  rc-thermal-circuit.tex  references-appendix.bib  references.bib  reliability-model-extended.tex  reliability-model.tex  reliability.tex  results.tex  solution.tex  ssdtc.tex  straight-forward.tex  table-optimization.tex  tta-analytical.tex
doc/speech/: speech.tex
msrc/: CMakeLists.txt  Constants.m  calculateTimeConstant.m  comparePerformance.m  compareSSDTC.m  convergeHotspot.m  scaleProcessorArea.m  scaleProcessorPower.m  scaleProcessorThickness.m  setup.m  solve.m  testCE.m  testGLSAgingEnergy.m  testHSConvergence.m  testHSPrecision.m  testHSVerification.m  testLifetimeDetection.m  testLifetimePrediction.m  testLin.m  testMappingScheduling.m  testMin.m  testPowerLeakage.m  testRanking.m  testSolutions.m  testTemperatureApproximation.m
msrc/+Genetic/: LSAging.m  LSAgingEnergy.m
msrc/+Sweep/: Power.m
msrc/+TestCase/: Processor.m  TGFF.m  Task.m
msrc/+Utils/: CMakeLists.txt  NRMSE.m  RMSE.m  collectLeakageParams.m  compact.m  compactTaskGraph.m  compareLines.m  compareTemperature.m  configStream.m  draw.m  drawEvolution.m  drawEvolutionSet.m  drawLines.m  drawLinesFromFile.m  drawPareto.m  drawProgress.m  drawSimulation.m  drawTemperature.m  dumpPowerProfile.m  equalScales.m  extractDominant.m  flatten.m  generateEvenMapping.m  generateFloorplan.m  include.m  inspectVector.m  mMD5.c  paretoSpline.m  path.m  peakdet.m  readParameter.m  round2.m  run.m  saveTestCase.m  showEvolutionStats.m  showEvolutionStatsSet.m  summarizePareto.m  symmetrize.m  temp.m  tgffopt.m  (+2 more)
msrc/@HotSpot/: CMakeLists.txt  HotSpot.m  hotspot  mex_utils.cpp  mex_utils.h  obtain_coefficients.cpp  solve_condensed_equation.cpp  solve_condensed_equation_with_leakage.cpp  solve_original.cpp  utils.cpp
msrc/@Hotspot/: Hotspot.m
msrc/@LS/: LS.m
msrc/@Lifetime/: Lifetime.m
src/: CMakeLists.txt  Constants.m  Estimator.m  GLSA.m  Graph.m  LS.m  Link.m  SSDTC.m  State.m  TGFF.m  Table.m  Task.m  Utils.m  compareCEAndHS.m  detectPeaks.m  generate.m  generateTestCases.m  setup.m  test.m  testCE.m  testCompareCEAndHS.m  testCoresScale.m  testDetectPeaks.m  testGLSA.m  testGLSAging.m  testGLSAgingEnergy.m  testGenetics.m  testHSConvergence.m  testMappingScheduling.m  testPeakDetection.m  testPowerLeakage.m  testPowerTemperature.m  testScaleCores.m  testScaleSamplingInterval.m  testScaleSteps.m  testScalingCores.m  testScalingSamplingInterval.m  testScalingSteps.m  testStepsScale.m  testVerifyHS.m  (+1 more)
src/+Algorithms/: GLSA.m  LS.m  SSDTC.m  TM.m
src/+External/: hotspot.h  solveSSDTCWithHotSpot.cpp
src/+Genetic/: LS.m  LSAging.m  LSAgingEnergy.m
src/+HotSpot/: CMakeLists.txt  hotspot.c  hotspot.cpp  hotspot.h  matrix.c  matrix.h  obtainModel.cpp  solveSSDTC.cpp  solveSSDTCCE.cpp  solveSSDTCEC.cpp  utils.cpp  utils.h
src/+Power/: calculateDynamic.m  calculateProfile.m
src/+Rainflow/: CMakeLists.txt
src/+TestCase/: Graph.m  Parser.m  Processor.m  TGFF.m  TGFFParser.m  TGFFState.m  Task.m
src/+TestCase/@Graph/: Graph.m  draw.m  inspect.m
src/+TestSet/: Graph.m  TGFFParser.m
src/+Utils/: CMakeLists.txt  calcError.m  compactTaskGraph.m  drawLines.m  drawMappingScheduling.m  drawSimulation.m  dumpField.m  dumpObject.m  eprintf.m  extendPowerProfile.m  generateFloorplan.m  mapToVector.m  path.m  peakdet.m  run.m  startTimer.m  stopTimer.m  toYears.m
src/@GLSA/: GLSA.m
src/@Genetics/: Architecture.cpp  Architecture.h  CMakeLists.txt  Common.cpp  Common.h  DynamicPower.cpp  Genetic.h  GeneticListScheduler.cpp  GeneticListScheduler.h  GeneticListScheduler.hpp  Genetics.m  Graph.cpp  Graph.h  Hotspot.cpp  Hotspot.h  Lifetime.cpp  Lifetime.h  ListScheduler.cpp  ListScheduler.h  Processor.h  SingleGLS.cpp  SingleGLS.h  SingleObjectiveGLS.cpp  SingleObjectiveGLS.h  Task.cpp  Task.h  TaskGraph.h  gaCommon.h  gaListScheduler.h  gaListScheduler.hpp  optima.cpp  optimizeAging.cpp  utils.h
src/@HotSpot/: CMakeLists.txt  HotSpot.m  hotspot.cpp  hotspot.h  obtain_coefficients.cpp  solve_condensed_equation.cpp  solve_condensed_equation_with_leakage.cpp  solve_original.cpp  utils.cpp  utils.h
src/@LS/: LS.m
src/@Lifetime/: Lifetime.m
src/@Power/: Power.m  fitProfile.m
test/: 001.tgffopt  001_010.tgffopt  001_030.tgffopt  001_060.tgffopt  001_hs.tgffopt  001_ss.tgffopt  002.tgffopt  002_006.tgffopt  002_030.tgffopt  004.tgffopt  004_010.tgffopt  004_060.tgffopt  004_090.tgffopt  008.tgffopt  009_030.tgffopt  016.tgffopt  032.tgffopt  036_030.tgffopt  CMakeLists.txt  clone  common.rb  evaluate  generate  generator.rb  genetic.config  genetic.template  hotspot.config  hotspot.template  parameters.config  params.config  parse  platformize  run  stats  template.rb  template.tgffopt
(+78 files in other folders)
